<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/textview"
        android:layout_width="376dp"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="casual"
        android:text="@string/select_the_game"
        android:textColor="#750A0A"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Flappybirdbuton"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/playbutton"
        android:elegantTextHeight="true"
        android:fontFamily="casual"
        android:text="@string/flappy_bird"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Tictactoebutton"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Flappybirdbuton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/playbutton"
        android:elegantTextHeight="true"
        android:fontFamily="casual"
        android:text="@string/tic_tac_toe"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Sudokubutton"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Tictactoebutton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/playbutton"
        android:elegantTextHeight="true"
        android:fontFamily="casual"
        android:text="@string/sudoku"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />


</RelativeLayout>